--- a/app/viewTechInformation/viewTechInformation.html
+++ b/app/viewTechInformation/viewTechInformation.html
@@ -7,11 +7,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4">
-
-                </div>
-                <div class="col-xs-8">
-
+                <div class="col-xs-12">
+                    <ul>
+                        <li>AngularJS</li>
+                        <li>Bootstrap 3</li>
+                        <li>NPM</li>
+                        <li>Bower</li>
+                        <li>Grundlegendes Unit Testing</li>
+                    </ul>
                 </div>
             </div>
         </div>
