Update github link

--- a/app/viewTechInformation/viewTechInformation.html
+++ b/app/viewTechInformation/viewTechInformation.html
@@ -13,7 +13,8 @@
                         <li>Bootstrap 3</li>
                         <li>NPM</li>
                         <li>Bower</li>
-                        <li>Grundlegendes Unit Testing</li>
+                        <li>Grundlegendes Unit Testing mit Karma</li>
+                        <li>Git: <a href="https://github.com/benjamin-seidel/sumcumo-app">https://github.com/benjamin-seidel/sumcumo-app</a></li>
                     </ul>
                 </div>
             </div>
